[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/hud/pointer.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/AA_typewriter.ttf" type="DynamicFontData" id=3]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0.231373, 0.215686, 0.188235, 1 )
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Yaw" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Yaw"]
current = true

[node name="Item_Holder" type="Spatial" parent="Yaw/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.79308, 0.46516, -1.58888 )

[node name="InteractionRay" type="RayCast" parent="Yaw/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -5 )
collision_mask = 4
collide_with_areas = true

[node name="look_at" type="Position3D" parent="Yaw/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.85563 )

[node name="pickup_pos" type="Position3D" parent="Yaw/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.64249 )

[node name="interaction_text" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
text = "text ghere"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 800, 450 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="error" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -52.0
margin_bottom = -21.0
custom_colors/font_color = Color( 0.839844, 0.249329, 0.249329, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Timer" type="Timer" parent="error"]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="error/Timer" to="." method="_onErrorMessageTimeout"]
